# cpp-graphmath

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: test.yml
cmake/: AddGraphMathTest.cmake
include/graphmath/: float3.h  float4.h  float4x4.h  graphmath.h  not_implemented.h  print.h
include/platform-simd/: float3.h
unittests/: CMakeLists.txt  float3.cc  float3_test.cc  float4.cc  float4_test.cc  float4x4_test.cc  helpers.h  not_implemented_test.cc  print_test.cc
